; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/audio/extr_audio_mixer.c_one_shot_resample.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/audio/extr_audio_mixer.c_one_shot_resample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resampler_data = type { float*, float*, i64, float, i64 }
%struct.TYPE_3__ = type { i32 (i8*)*, i32 (i8*, %struct.resampler_data*)* }

@s_rate = common dso_local global i64 0, align 8
@RESAMPLER_QUALITY_DONTCARE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (float*, i64, i32, float**, i64*)* @one_shot_resample to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @one_shot_resample(float* %0, i64 %1, i32 %2, float** %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca float*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca float**, align 8
  %11 = alloca i64*, align 8
  %12 = alloca %struct.resampler_data, align 8
  %13 = alloca i8*, align 8
  %14 = alloca %struct.TYPE_3__*, align 8
  %15 = alloca float, align 4
  store float* %0, float** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store float** %3, float*** %10, align 8
  store i64* %4, i64** %11, align 8
  store i8* null, i8** %13, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %14, align 8
  %16 = load i64, i64* @s_rate, align 8
  %17 = sitofp i64 %16 to double
  %18 = load i32, i32* %9, align 4
  %19 = uitofp i32 %18 to double
  %20 = fdiv double %17, %19
  %21 = fptrunc double %20 to float
  store float %21, float* %15, align 4
  %22 = load i32, i32* @RESAMPLER_QUALITY_DONTCARE, align 4
  %23 = load float, float* %15, align 4
  %24 = call i32 @retro_resampler_realloc(i8** %13, %struct.TYPE_3__** %14, i32* null, i32 %22, float %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %69

27:                                               ; preds = %5
  %28 = load i64, i64* %8, align 8
  %29 = uitofp i64 %28 to float
  %30 = load float, float* %15, align 4
  %31 = fmul float %29, %30
  %32 = fadd float %31, 4.000000e+00
  %33 = fptoui float %32 to i64
  %34 = load i64*, i64** %11, align 8
  store i64 %33, i64* %34, align 8
  %35 = load i64*, i64** %11, align 8
  %36 = load i64, i64* %35, align 8
  %37 = add i64 %36, 15
  %38 = and i64 %37, -16
  %39 = mul i64 %38, 4
  %40 = call i64 @memalign_alloc(i32 16, i64 %39)
  %41 = inttoptr i64 %40 to float*
  %42 = load float**, float*** %10, align 8
  store float* %41, float** %42, align 8
  %43 = load float**, float*** %10, align 8
  %44 = load float*, float** %43, align 8
  %45 = icmp eq float* %44, null
  br i1 %45, label %46, label %47

46:                                               ; preds = %27
  store i32 0, i32* %6, align 4
  br label %69

47:                                               ; preds = %27
  %48 = load float*, float** %7, align 8
  %49 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %12, i32 0, i32 0
  store float* %48, float** %49, align 8
  %50 = load float**, float*** %10, align 8
  %51 = load float*, float** %50, align 8
  %52 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %12, i32 0, i32 1
  store float* %51, float** %52, align 8
  %53 = load i64, i64* %8, align 8
  %54 = udiv i64 %53, 2
  %55 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %12, i32 0, i32 2
  store i64 %54, i64* %55, align 8
  %56 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %12, i32 0, i32 4
  store i64 0, i64* %56, align 8
  %57 = load float, float* %15, align 4
  %58 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %12, i32 0, i32 3
  store float %57, float* %58, align 8
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 1
  %61 = load i32 (i8*, %struct.resampler_data*)*, i32 (i8*, %struct.resampler_data*)** %60, align 8
  %62 = load i8*, i8** %13, align 8
  %63 = call i32 %61(i8* %62, %struct.resampler_data* %12)
  %64 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %65 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %64, i32 0, i32 0
  %66 = load i32 (i8*)*, i32 (i8*)** %65, align 8
  %67 = load i8*, i8** %13, align 8
  %68 = call i32 %66(i8* %67)
  store i32 1, i32* %6, align 4
  br label %69

69:                                               ; preds = %47, %46, %26
  %70 = load i32, i32* %6, align 4
  ret i32 %70
}

declare dso_local i32 @retro_resampler_realloc(i8**, %struct.TYPE_3__**, i32*, i32, float) #1

declare dso_local i64 @memalign_alloc(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
